--- a/simulators.html
+++ b/simulators.html
@@ -61,7 +61,7 @@
     </section>
 
 
-    <<section id="bruteforce">
+    <section id="bruteforce">
     <h2>Brute Force Attack (Visual Simulator)</h2>
 
     <p>
