Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <h2>Project Contributors</h2>
     <p>
         This project was designed and developed by
-        <strong>Shivam Kumar S</strong> and <strong>Manya R</strong>
+        <strong>Shivam Kumar S</strong>
         as an educational cybersecurity awareness initiative.
     </p>
     </section>
@@ -95,9 +95,10 @@
 </main>
 
 <footer>
-    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S and Manya R</p>
+    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S</p>
 </footer>
 
 
 </body>
 </html>
+
