--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <h1>Cybersecurity Awareness Platform</h1>
     <p>Learn. Simulate. Stay Secure.</p>
-    <p><strong>Developed by:</strong> Shivam Kumar S and Manya R</p>
+    <p><strong>Developed by:</strong> Shivam Kumar S</p>
     </header>
 
 
@@ -83,9 +83,10 @@
 
 
     <footer>
-        <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S and Manya R</p>
+        <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S</p>
     </footer>
 
     <script src="assets/js/main.js"></script>
 </body>
 </html>
+
