Fix HTML encoding issues in learn.html

--- a/learn.html
+++ b/learn.html
@@ -85,9 +85,10 @@
 </main>
 
 <footer>
-    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S and Manya R</p>
+    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S </p>
 </footer>
 
 
 </body>
 </html>
+
