--- a/simulators.html
+++ b/simulators.html
@@ -107,11 +107,12 @@
 </main>
 
 <footer>
-    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S and Manya R</p>
+    <p>© 2025 Cybersecurity Awareness Project | Developed by Shivam Kumar S </p>
 </footer>
 
 
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
